services/kong/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: kong
          image: kong:latest
          ports:
            - containerPort: 8000
              name: proxy
            - containerPort: 8001
              name: admin
          readinessProbe:
            httpGet:
              path: /status
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 12
          volumeMounts:
            - name: kong-config
              mountPath: /etc/kong/kong.yaml
              subPath: kong.yaml
